apps/forgejo/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
